Fix: typo and titles

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: ClassConnect Manual
+title: Guía de ClassConnect
 description: Documentación para usuarios y administradores de ClassConnect.
 theme: just-the-docs
 
