docs: admin guide
Co-authored-by: Máximo Gismondi <maximogismondi@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,5 @@ url: https://classconnectg10.github.io/manual/
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
+
+favicon: "/assets/favicon.ico"
