--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,9 @@ aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
 
 favicon: "/assets/favicon.ico"
+
+search:
+  placeholder: "Buscar en la documentación..."
+
+toc:
+  heading: "Índice"
